--- a/assets/css/Tony.css
+++ b/assets/css/Tony.css
@@ -1,293 +1,268 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 *
 {
-padding: 0;
-margin: 0;
+    margin: 0;
+    padding: 0;
+    box-sizing:border-box;
+    font-family:'Poppins',sans-serif;
 }
 
-
-
-.col-4
-{
-    padding: 1rem;
-    background-color: rgb(5, 17, 51);
-    color: rgb(245, 245, 225);
-    text-align: center;
-    border: 5em;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: large;
-    width: 25%;
-    height: 1800px;
-}
-.col-8{
-    padding:1rem;
-    text-align:center;
-    float: right;
-    width: 10%;
-    border: 1px;
-   
-    
-}
-.img-fluid
-{
-border-radius: 100%;
-height:400px;
-width:400px;
-left: 80%;
-right: 80%;
-margin-top: 10%;
-}
-.c
-{
-    font-size: medium;
-    padding: 0rem;
-    background-color: rgba(82, 104, 136, 0.87);
-    right: 50%;
-    left: 50%;
-    margin-top: 20%;
-}
-.svg{
-    text-align: left;
-    margin-top: 10%;
-    margin-bottom: -30%;
-
-}
-.name{
-    background-color: rgba(82, 104, 136, 0.87);
-    padding: 5px;
-    height: 100px;
-    width: 900px;
-    margin-left: 0%;
-    margin-top: 0px;
-    margin-bottom: 0px;
-
-}
-
-.row-2{
-    color:  rgba(82, 104, 136, 0.87);
-    text-decoration: solid;
-    text-align: left;
-    margin-top: 10%;
-    margin-bottom: 0%;
-}
-.row-3{
-    color:  rgba(82, 104, 136, 0.87);
-    text-decoration: solid;
-    text-align: left;
-    margin-top: 3%;
-}
-.row-4{
-    color:  rgba(82, 104, 136, 0.87);
-    text-decoration: solid;
-    text-align: left;
-    margin-top: 36%;
-}
-.d
-{
-    font-size: medium;
-    padding: 0rem;
-    background-color: rgba(82, 104, 136, 0.87);
-    width: 100%;
-    left: 50%;
-    right: 50%;
-    margin-top: 40%;
-    margin-bottom: -30%;
-}
-.k{
-    text-align: justify;
-}
-.l{
-    text-align: justify;}
-.m{
-    text-align: justify;
-    position:absolute;
-    left: 50%;
-    right: 10%;
-}
-
-.n{
-    text-align: justify;
-    margin-top: 22%;
-}
-.o{
-    text-align: justify;
-    position:absolute;
-    left: 50%;
-    right: 10%;
-}
-.p{
-    text-align: justify;
-    margin-top: 28%;
-}
-.q{
-    text-align: justify;
-    position:absolute;
-    left: 50%;
-    right: 10%;
-}
-.r{
-    text-align: justify;
-    margin-top: 19%;
-}
-.s{
-    text-align: justify;
-    position:absolute;
-    left: 50%;
-    right: 10%;
-}
-.t{
-    text-align: justify;}
-.u{
-    text-align: justify;
-    position:absolute;
-    left: 50%;
-    right: 10%;}
-.v{
-    text-align: justify;
-    margin-top: 7%;
-}
-.w{
-    text-align: justify;
-    position:absolute;
-    left: 50%;
-    right: 10%;
-}
-.x{
-    text-align: justify;
-    margin-top: 9%;
-}
-.y{
-    text-align: justify;
-    position:absolute;
-    left: 50%;
-    right: 10%;
-}
-.container{
-  width:100%;
-  height: 100vh;
-  display: flex; 
-  align-items: center;
-  justify-content: center;
-}
-.skills h4{
-    font-weight:300;
-    letter-spacing: 1px;
-    margin-top: 40px;
-    margin-bottom: 5px;
-    color: #fff;
-    font-size: 16px;
- 
-}
-.progress-bar{
-    background: #db1c1ce7;
-    width:270px;
-    height: 10px;
-    border-radius: 20px;
-}
-.progress-bar div{
-    height:100px;
-    border-radius: 100px;
-    width: 70%;
-    
-    
-}
-.progress-bar div span{
-    height: 40px;
-    width: 40%;
-    border-radius: 100px;
-    background: rgba(86, 94, 92, 0.288); 
-    float: right;
-    margin-top: -15px;
-    margin-bottom: -20px;
-    color: rgba(255, 255, 255, 0.37);
+body{
+    background: lightblue;
     display: flex;
-    align-items: center;
     justify-content: center;
-
-}
-.sw{
-background: #817d77;
-animation:sw 1s linear forwards;
-}
-.pc{
-background: #817d77;
-animation: pc 1s linear forwards;
-}
-.at{
-background: #817d77;
-animation: at 1s linear forwards;
-
-}
-.ec{
-background: #817d77;
-animation: ec 1s linear forwards;
-
-}
-.sr{
-background: #817d77;
-animation: sr 1s linear forwards;
-}
-
-.sw span{
-    border: 1px solid #9ba395;
-}
-.pc span{
-    border: 1px solid #161516;
-}
-.at span{
-    border: 1px solid #9c27b0;
-}
-.ec span{
-    border: 1px solid #9c27b0;
-}
-.sr{
-    border: 1px solid #2772b07e;
-}
-@keyframes sw{
-    100%{
-        width: 100%;
-    }
-}
-@keyframes pc{
-    100%{
-        width: 100%;
-    }
-}
-@keyframes at{
-    100%{
-        width: 100%;
-    }
-}
-@keyframes ec{
-    100%{
-        width: 100%;
-    }
-}@keyframes sr{
-    100%{
-        width: 100%;   
-    }
-}
-.square_div{
-    height: 70px;
-    width: 70px;
-    display: inline;
     align-items: center;
-    margin-left: 10px;
+    min-height: 100vh;
+    margin: auto;
 }
-.square{
-    height: 70px;
-    width: 70px;
-    display: inline;
-    margin-left: 10px;
+
+.container{
+    position: relative;
+    width: 100%;
+    max-width: 1000px;
+    min-height: 1000px;
+    background: #fff;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-auto-flow: column;
+    box-shadow: 0 35px 55px rgba(0,0,0,0.1);
+    margin: auto;
+}
+
+.container .left-side{
+    position: relative;
+    background: #003147;
+    padding:40px;
+}
+
+.profileText{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(255,255,255,0.2);
+}
+
+.profileText .ImgBx{
+    position: relative;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.profileText .ImgBx img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 
 }
-.lang{
-    font-size: medium;
-    padding: 0rem;
-    background-color: rgba(82, 104, 136, 0.87);
+
+.profileText h2{
+    color: #fff;
+    font-size: 1.5em;
+    margin-top: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 600;
+    line-height: 1.4em;
+}
+
+.profileText h2 span{
+    font-size: 0.8em;
+    font-weight: 300;
+}
+
+
+.contactInfo{
+    padding-top: 40px;
+}
+
+.title{
+    color:#fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin-bottom: 20px;
+}
+
+.contactInfo ul{
+    position: relative;
+}
+
+.contactInfo ul li{
+    position: relative;
+    list-style: none;
+    margin: auto;
+    cursor: pointer;
+
+}
+
+.contactInfo ul li .icon{
+    display: inline-block;
+    width: 30px;
+    font-size: 18px;
+    color: #03a9f4;
+}
+
+.contactInfo ul li span{
+    color:#fff;
+    font-weight: 300;
+}
+
+.contactInfo.education li{
+    margin-bottom: 15px;
+
+}
+
+.contactInfo.education h5{
+    color:#03a9f4;
+    font-weight: 500;
+}
+
+.contactInfo.education h4:nth-child(2){
+    color: #fff;
+    font-weight: 500;
+}
+
+
+
+
+
+.contactInfo.education h4{
+    color: #fff;
+    font-weight: 500;
+}
+
+.contactInfo.language .percent{
+    position: relative;
     width: 100%;
-    left: 50%;
-    right: 50%;
-    margin-bottom: 40px;
-    margin-top: -50px;
+    height: 6px;
+    background: #081921;
+    display:block;
+    margin-top:5px;
+}
+
+.contactInfo.language .percent div{
+    position:absolute;
+    top: 0;
+    left:0;
+    height: 100%;
+    background: #03a9f4;
+}
+
+
+
+
+.container .right-side{
+    position:relative;
+    background: #fff;
+    padding: 40px;
+}
+
+.about{
+    margin-bottom: 50px;
+}
+.about:last-child{
+    margin-bottom: 0;
+}
+
+.title2{
+    color: #003147;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+}
+
+p{
+    color: #333;
+}
+
+
+.about .box{
+display: flex;
+flex-direction: row;
+margin:20px 0;
+
+}
+
+.about .box .year-company{
+    min-width: 150px;
+
+}
+
+.about .box .year-company h5{
+text-transform: uppercase;
+color:#848c98;
+font-weight: 600;
+
+}
+
+.about .box .text h4{
+    text-transform: uppercase;
+    color: #2a7da2;
+    font-size: 16px;
+}
+.skills .box{
+    position:relative;
+    width:100%;
+    display:grid;
+    grid-template-columns: 150px 1fr;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.skills .box h4{
+    text-transform: uppercase;
+    color: #848c99;
+    font-weight: 500;
+
+}
+
+.skills .box .percent{
+    position:relative;
+    width:100%;
+    height:10px;
+    background: #003147;
+}
+.skills .box .percent div{
+    position:absolute;
+    top:0;
+    left:0;
+    height: 100%;
+    background: #03a9f4;
+}
+
+.interest ul{
+    display:grid;
+    grid-template-columns: repeat(4,1fr);
+}
+
+.interest ul li{
+    list-style: none;
+    color:#333;
+    font-weight: 500;
+    margin: auto;
+
+}
+
+.interest ul li .fa{
+    color: #03a9f4;
+    font-size: 18px;
+    width:20px;
+
+}
+
+
+@media(max-width:1000px)
+{.container{
+margin:10px;
+}
+
 
 }
