--- a/assets/css/Joshua.css
+++ b/assets/css/Joshua.css
@@ -24,9 +24,20 @@ body {
 }
 
 #social-icons {
-  text-align: center;
+  text-align: left;
   margin: auto;
-  padding: 20px 20px;
+  padding: 20px 60px;
+  text-decoration: none;
+  
+}
+
+li > a{
+  text-decoration: none;
+  font-size: x-large;
+}
+
+h3 > a{
+  text-decoration: none;
 }
 
 .media-icons {
@@ -74,8 +85,8 @@ h4 h1 {
 }
 
 img {
-  width: 130px;
-  height: 130px;
+  width: 150px;
+  height: 150px;
 }
 
 .grid-one {
